Fixing the support buttons on the home page not clicking well on mobile

--- a/css/home.css
+++ b/css/home.css
@@ -119,6 +119,7 @@
     padding: 7% 0 0 0;
 }
 
+
 .support-type-card {
     border: 4px solid var(--color-primary-red);
     border-radius: 15px;
@@ -182,6 +183,7 @@
     text-align: center;
     gap: 180px;
     padding: 30% 1% 0% 1%;  
+    max-height: 100px;
 }
 
 .support-type-text {
